# hestia-hkc

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  start.bat  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/modules/: README.md  hkc-api_README.md  hkc-crystallizer_LAYER.md  hkc-crystallizer_README.md  hkc-kee_DEDUP.md  hkc-sdk_README.md  hkc-search_EMBEDDING_BACKENDS.md
hkc-ui/: README.md  index.html
scripts/: observe_dedup.py
src/hkc_ace/: ace.py  skill_taxonomy.json
src/hkc_api/: container.py  ingest_jobs.py  main.py  schemas.py  synthesis.py
src/hkc_api/routes/: ability.py  config.py  knowledge.py  search.py
src/hkc_core/graph/: base.py  sqlite_store.py
src/hkc_core/models/: enums.py  ku.py
src/hkc_core/utils/: id_gen.py
src/hkc_crystallizer/: __init__.py  adapters.py  candidate.py  crystallizer.py  ingress.py
src/hkc_kde/: chunker.py  extractor.py  kde.py  models.py  packager.py  relation_disc.py
src/hkc_kde/loaders/: ebook_loader.py  pdf_loader.py  text_loader.py  web_loader.py
src/hkc_kee/: dedup.py  fingerprint.py  kee.py
src/hkc_kep/: event_bus.py
src/hkc_sdk/: __init__.py  base.py  direct_client.py  exceptions.py  http_client.py  models.py
src/hkc_search/: bm25.py  embedding_backends.py  graph_search.py  hybrid.py  vector_search.py
tests/: test_api.py  test_concurrency.py  test_crystallizer.py  test_evidence_chain.py  test_integration.py  test_kde.py  test_kee_dedup.py  test_sdk.py  test_search.py
